# etrade_invoice_bulk_parsing

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.example.toml
scripts/: dump_py_to_txt.py
src/invoice_processing/: bulk_emailer.py  bulk_models.py  bulk_processing.py  cli.py  emailer.py  error_handling.py  exceptions.py  logging_config.py  sheet_names.py  upload_validation.py
src/invoice_processing/exporters/: bulk_public_excel.py  internal_excel.py  public_transform.py
src/invoice_processing/parsers/: invoice_parser.py
tests/: test_bulk_processing.py
